2010-02-27  Satoshi Yatagawa  <yata_github@y.hauN.org>
	
	* twittering-mode.el (twittering-retweet): If `C-u' prefix is
	given, `twittering-use-native-retweet' is temporarily reversed
	before use.
	(twittering-follow): Handle a prefix `C-u' correctly.
	(twittering-favorite): Likewise.

2010-02-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-format-status): Use the return
	value of the flet'ed function `attr' directly for the specifier
	"%L", forgotten in the 2010-02-18 changing.

	* twittering-mode.el (twittering-retrieve-image): Check the return
	value of `call-process-region'.
	(twittering-make-display-spec-for-icon): Check the return value of
	`twittering-retrieve-image'.

	* twittering-mode.el (twittering-format-status): Don't check
	`twittering-image-data-table' here.
	(twittering-format-status): Don't define `profile-image' as
	flet'ed function for the specifier "%i".

	* twittering-mode.el (twittering-get-tweets): Don't call
	`twittering-retrieve-image' here.
	 
	* twittering-mode.el (twittering-retrieve-image): Bind
	`url-show-status' locally to inhibit showing a progress message.
	(twittering-tinyurl-get): Likewise.

	* twittering-mode.el (twittering-image-type): Don't use the
	external command `file' because Emacs can display only an image
	which is recongnized by `image-type-from-data'.
	(twittering-retrieve-image): Don't look up
	`twittering-image-data-table' here.
	(twittering-make-display-spec-for-icon): Call
	`twittering-retrieve-image' only when `gethash' returns nil.

2010-02-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
	Call `twittering-decode-html-entities' to decode entities
	properly.

	* twittering-mode.el (twittering-get-error-message): Change the
	first argument to `buffer' from `proc'.
	(twittering-http-get-default-sentinel): Adjust callers.
	(twittering-http-get-list-index-sentinel): Likewise.